# scribe

./: .gitignore  pyproject.toml  requirements.txt  roles.yaml  scribe.md  scribe.py
