[project]
name = "scribe"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "openai>=1.0.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "redis>=5",
    "rq>=1.15",
    "uvicorn[standard]>=0.35.0",
    "python-dotenv>=1.0.0",
]
